# my-android-crasher

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/androidcrasher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/crashpad/lib/arm64-v8a/client/: common.ninja
app/src/main/cpp/crashpad/lib/arm64-v8a/util/: net.ninja  no_cfi_icall.ninja  util.ninja
app/src/main/cpp/crashpad/lib/armeabi-v7a/base/: base.ninja
app/src/main/cpp/crashpad/lib/x86_64/client/: client.ninja  client_test.ninja  pthread_create.ninja
app/src/main/cpp/crashpad/lib/x86_64/util/: util_test.ninja
app/src/main/java/com/example/androidcrasher/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/androidcrasher/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
tools/: symupload-linux.sh  symupload-mac.sh  symupload-windows.ps1
tools/linux/: update.sh
tools/mac/: update.sh
